added Nikola code

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>Explore Byte Tutorial</title>
+    <title>All men must die - GOT</title>
     
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -60,14 +60,27 @@
       {% endfor %}
     </div>
     
-    <div id="animals"><table id="data" class="table table-striped table-hover">
-	<thead class ="thead-inverse">
-	  <tr id="cols">
-	  </tr>
-	</thead>
-	<tbody id="rows"> 
-	</tbody>
-    </table></div>
+    <div class="table-responsive">
+	  <table class="table table-striped table-hover">
+	    <thead class="thead-inverse">
+	     <tr> 
+	{% for item in headers %}
+	         <th>{{ item }}</th>
+	{% endfor %}
+	     </tr>
+	    </thead>
+	    <tbody>
+	{% for row in content %}
+	     <tr>
+	  {% for datum in row %}
+	            <td>{{ datum }} </td>
+	  {% endfor %}
+	     </tr>
+	{% endfor %}
+	    </tbody>
+	   </table>
+	</div> 
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
