--- a/templates/about.html
+++ b/templates/about.html
@@ -47,18 +47,29 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
 	<h1>Accountability: About This Data Set</h1>
-        <p>Write a brief summary about the data set here</a></p>
       </div>
+    <div class="page-header">
+    <h2>Dataset Overview</h2>
+            <p>The original dataset contains 13 columns, representing the name of the character, house of allegiance, information about his introduction to the series, information about their death (if they are dead), and information on which book they appeared.
 
-    
+            In order to obtain the graphs showed, a preprocessing step was necessary and was done using the pandas library of Python on the Google Cloud DataLab. The seaborn library was used for the plots.
+
+            The preprocessing step consisted of 4 parts:
+            - Convert missing values strings to NaN.
+            - Create a new column that represents the chapter based on the same referencial timeline, instead of relative to books.
+            - Clean the Allegiance column, as some rows contained the prefix "House " and some didn't. It was decided to eliminate this prefix.
+            - Convert the labels for Gender from binary to the names "Male" and "Female" for easier analysis.
+
+        </p>
+
       <div class="page-header">
 	<h2>Where did this data come from?</h2>
-	<p>fill in</p>
+	<p>For this analysis we use the following dataset available on Kaggle that was imported into Google Fusion Tables: https://www.kaggle.com/mylesoneill/game-of-thrones</p>
       </div>
       
       <div class="page-header">
 	<h2>Who has access to it?</h2>
-	<p>fill in</p>
+	<p>The access is public, and anyone can use the dataset for educational and recreational purposes.</p>
       </div>
 
 
