--- a/templates/quality.html
+++ b/templates/quality.html
@@ -46,27 +46,43 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
 	<h1>Quality: About This Data Set</h1>
-        <p>Write a brief summary about the quality of the data set here</a></p>
       </div>
 
     
       <div class="page-header">
 	<h2>Is the data complete?</h2>
-	<p>If not, what is missing and what concerns does it raise?
-	What is your evidence for this?</p>
+	<p>The data is complete for answering the questions proposed in this byte. It has the information from all the characters mentioned in the book along with their allegiance, gender, introduction and death in the book.
+
+  If we wanted to answer information about the most important characters in the book, we would need the text and find the frequency of words to create an informal network of the series. In other words, the granularity is not the best for performing that kind of analysis, but it serves the purpose of this byte.</p>
       </div>
       
       <div class="page-header">
 	<h2>Is the data coherent?</h2>
-	<p>Does it make sense relative to itself? Does it match your
-	expectations? Are the distributions sensible? What is your
-	evidence for this?</p>
+	<p>There are several things I checked to confirm that the data is coherent:
+      - The introduction book and chapter was before the death book and chapter.
+      - The death year makes sense compared to the book of death.
+
+      After looking at this, we confirmed that the data is coherent and we can use it for analysis.
+
+  </p>
       </div>
 
       <div class="page-header">
 	<h2>Is the data correct?</h2>
-	<p>What aspects of this data can you verify? How did you do so? What did
-	you find?</p>
+	<p>There are several things I looked at to confirm that the data was correct:
+      - The last names of the characters corresponded to their reported allegiance.
+      - The introduction and death of the principal characters are where they're supposed to.
+      - Randomly selected some characters and confirmed that the gender was correct.
+      After this, I could confirm that the data appears to be sound and that it could be used for the analysis.
+      </p>
+      </div>
+
+       <div class="page-header">
+  <h2>Is the data accountable?</h2>
+    <p> The data has been reviewed by a community of Game of Thrones fans and was curated to represent accountable information about the series.
+
+    Because several people with knowledge of the series have corrected and verified this information, it can be said that the data is accountable.
+  </p>
       </div>
 
     </div> <!-- /container -->
