--- a/templates/index.html
+++ b/templates/index.html
@@ -60,10 +60,8 @@
       <div class="page-header">
 	
       </div> <!-- /page-header -->
-    </div> <!-- /container -->
     
-    <div class="button-toolbar" role="toolbar" id="headers" name="headers">
-    </div>
+    
     
     <div class="table-responsive">
 	  <table class="table table-striped table-hover">
@@ -86,6 +84,7 @@
 	   </table>
 	</div> 
 
+			<div>
 			<h2>
 				Analysis per Allegiance
 			</h2>
@@ -170,6 +169,8 @@
 				We can conclude from here that the life expectancy depends on the house of allegiance. With the median life expectancy of all Westeros being at 126 episodes.
 
 			</p>
+			</div>
+			</div> <!-- /container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -186,82 +187,6 @@
 			return;
 		}
 
-	    // find the actual button in this document's HTML
-		button = document.getElementById(str);
-		// for debugging, write its name to the console
-		console.log(button.className);
-		// check if it is disabled (btn-info)
-		if (button.className.includes("btn-info")) {
-			// and enable it (btn-primary)
-			button.className = "btn btn-space btn-primary";
-		} else {
-			// otherwise disable it (btn-info)
-			button.className = "btn btn-space btn-info";
-		}
-
-		// now get all the buttons
-		buttons = document.getElementById("headers").children;
-		// and collect their names in cols
-		cols = [];
-		// loop through them
-		for (button in buttons) {
-			// grab the id (the name we need is there)
-			id = buttons[button].id;
-			// make sure it isn't null
-			if (buttons[button].id != null) {
-				// and that the button is selected 
-				var isPrimary = buttons[button].className.includes("btn-primary");
-				if (isPrimary && (cols.indexOf(id) == -1)) {
-					// if so, add it to our array
-					cols.push(id);
-				}
-			}
-		}
-					
-		$.ajax({
-			url: '/_update_table',
-			dataType: 'json',
-			contentType: 'application/json',
-			data: JSON.stringify({'cols' : cols}),
-			type: 'POST',
-			success: function (res, status) {
-				console.log("successrunning");
-				console.log(res["content"]);
-				console.log(res["headers"]);
-				var cols = res["headers"];
-				var rows = res["content"];
-
-				// get the table, columns and rows
-				table = document.getElementById("data");
-				headers = document.getElementById("cols");
-				body = document.getElementById("rows");
-
-				// delete current contents
-				headers.innerHTML='';
-				body.innerHTML = '';
-
-				// and put the new information in the table
-				for (col in cols) {
-					cell = document.createElement("th");
-					cell.innerHTML = cols[col];
-					headers.appendChild(cell);
-				}
-				for (row in rows) {
-					tr = document.createElement("tr");
-					for (item in rows[row]) {
-						td = document.createElement("td");
-						td.innerHTML = rows[row][item];
-						tr.appendChild(td);
-					}
-					body.appendChild(tr);
-				}
-			},
-			error: function(res, status) {
-				// On Error
-				alert('error');
-			}
-		});
-	}
 				   
 				   
 </script>
