fixed bullet points

--- a/templates/about.html
+++ b/templates/about.html
@@ -55,10 +55,12 @@
             In order to obtain the graphs showed, a preprocessing step was necessary and was done using the pandas library of Python on the Google Cloud DataLab. The seaborn library was used for the plots.
 
             The preprocessing step consisted of 4 parts:
-            - Convert missing values strings to NaN.
-            - Create a new column that represents the chapter based on the same referencial timeline, instead of relative to books.
-            - Clean the Allegiance column, as some rows contained the prefix "House " and some didn't. It was decided to eliminate this prefix.
-            - Convert the labels for Gender from binary to the names "Male" and "Female" for easier analysis.
+            <ul>
+            <li> Convert missing values strings to NaN.</li>
+            <li> Create a new column that represents the chapter based on the same referencial timeline, instead of relative to books.</li>
+            <li> Clean the Allegiance column, as some rows contained the prefix "House " and some didn't. It was decided to eliminate this prefix.</li>
+            <li> Convert the labels for Gender from binary to the names "Male" and "Female" for easier analysis.</li>
+            </ul>
 
         </p>
 
