--- a/templates/quality.html
+++ b/templates/quality.html
@@ -59,9 +59,10 @@
       <div class="page-header">
 	<h2>Is the data coherent?</h2>
 	<p>There are several things I checked to confirm that the data is coherent:
-      - The introduction book and chapter was before the death book and chapter.
-      - The death year makes sense compared to the book of death.
-
+  <ul> 
+      <li> The introduction book and chapter was before the death book and chapter.</li>
+      <li> The death year makes sense compared to the book of death.</li>
+  </ul>
       After looking at this, we confirmed that the data is coherent and we can use it for analysis.
 
   </p>
@@ -70,10 +71,14 @@
       <div class="page-header">
 	<h2>Is the data correct?</h2>
 	<p>There are several things I looked at to confirm that the data was correct:
-      - The last names of the characters corresponded to their reported allegiance.
-      - The introduction and death of the principal characters are where they're supposed to.
-      - Randomly selected some characters and confirmed that the gender was correct.
+  <ul>
+      <li> The last names of the characters corresponded to their reported allegiance.</li>
+      <li> The introduction and death of the principal characters are where they're supposed to.</li>
+      <li> Randomly selected some characters and confirmed that the gender was correct.</li>
+      </ul>
+
       After this, I could confirm that the data appears to be sound and that it could be used for the analysis.
+
       </p>
       </div>
 
